# WasmEdge

plugins/: CMakeLists.txt
plugins/test/: CMakeLists.txt  testplugin.cc  testplugin.h
